[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
chrono = "0.4.26"
colored = "2.0.4"
futures = "0.3.28"
hyper = "0.14.27"
pin-project = "1.1.2"
serde = { version = "1.0.179", features = ["serde_derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
